# Tachion

./: .gitattributes  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: README.md
api/: README.md  REAMDE.md  main.py  predict.py
core/: README.md  __init__.py  apis.py  bapi.py  frapi.py  oaapi.py  oapi.py  tdapi.py  yfapi.py
core/apis/: biapi.py  frapi.py  oaapi.py  tdapi.py  yfapi.py
core/processor/: dw.py  lr.py  ma.py  pw.py  rv.py
core/training/: config.py  constants.py  loads.py  progress.py
data/: README.md  __init__.py  collect.py
data/comm/: __init__.py  collector.py  comms.txt  formatter.py
data/crypto/: __init__.py  coins.txt  collector.py  formatter.py
data/equities/: __init__.py  collector.py  companies.txt  formatter.py  vix.py
data/forex/: __init__.py  collector.py  currencies.txt  formatter.py
data/interest/: __init__.py  collector.py  formatter.py  fred_tickers.txt  yahoo_tickers.txt
frontend/: README.md  index.html  main.js  main.jsx  styles.css
frontend/components/: footer.js  footer.jsx  graph.js  graph.jsx  header.jsx  sidebar.jsx
frontend/js/: api.js  events.js  state.js  state.jsx  ui.js  visualizer.js
models/: README.md  __init__.py
tachion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: README.md  __init__.py  conftest.py  test_bapi.py  test_collectors.py  test_oapi.py  test_tdapi.py
test/api-callers/: test_bapi.py  test_frapi.py  test_oapi.py  (+2 more)
train/: README.md  __init__.py  deep.py  evaluate.py  loader.py  tft.py  tft_pf.py  train_deep.py  train_xgboost.py  xg.py
(+11 files in other folders)
