[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tachion"
version = "0.1.0"
description = "Asset predictor with DeepAR and XGBoost"
authors = [{name = "intelligent-username"}]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["api", "core", "data", "train", "models", "data.equities"]
